--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -13,7 +13,7 @@
   <div class="page">
 <header class="topbar">
     <div class="container topbar__inner">
-    <a class="brand" href="{% url 'home' %}">Northwind Commerce</a>
+    <a class="brand" href="{% url 'shop:home' %}">Northwind Commerce</a>
     <label class="search" for="search">
         <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2">
         <circle cx="8" cy="8" r="6" />
@@ -23,8 +23,13 @@
     </label>
     
     <div class="topbar__actions">
+
+        {% if request.user.is_authenticated %}
         <a class="nav-link" href="sign-in.html">Account</a>
-        <a class="nav-link" href="{% url 'cart' %}">
+        {% else %}
+        <a class="nav-link" href="{% url 'users:sign-in' %}">Sign in </a>
+        {% endif %}
+        <a class="nav-link" href="{% url 'shop:cart' %}"> 
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <circle cx="9" cy="21" r="1" />
             <circle cx="20" cy="21" r="1" />
