--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load django_htmx %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
   <title>Northwind Commerce</title>
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% block extra_styles %}<link rel="stylesheet" href="{% static 'css/index.css' %}">{% endblock extra_styles %}
-  <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js" integrity="sha384-/TgkGk7p307TH7EXJDuUlgG3Ce1UVolAOFopFekQkkXihi5u/6OCvVKyz1W+idaz" crossorigin="anonymous"></script>
+  {%htmx_script%}
 </head>
 <body>
   <div class="page">
