--- a/users/templates/users/password-update.html
+++ b/users/templates/users/password-update.html
@@ -1,8 +1,7 @@
 {% extends 'shop/base.html' %}
 {% load static %}
-{% block extra_styles %} <link rel="stylesheet" href="{% static 'css/auth.css' %}"> {% endblock extra_styles %}
+{% block extra_styles %} <link rel="stylesheet" href="{% static 'users/css/auth.css' %}"> {% endblock extra_styles %}
 {% block content %}
-
     <main class="container auth">
       <div class="auth-card">
         <div>
@@ -10,7 +9,7 @@
           <h1 class="auth__title">Set a new password</h1>
           <p class="auth__subtitle">Choose a strong password to keep your account secure.</p>
         </div>
-        <form class="form">
+        <form  id="form" class="form">
           <div class="form__group">
             <label class="form__label" for="new-password">New password</label>
             <input id="new-password" class="form__control" type="password" placeholder="••••••••">
@@ -19,7 +18,7 @@
             <label class="form__label" for="confirm-password">Confirm password</label>
             <input id="confirm-password" class="form__control" type="password" placeholder="••••••••">
           </div>
-          <button class="btn btn--primary" type="button">Update password</button>
+          <button id="submit-btn" class="btn btn--primary" type="button">Update password</button>
         </form>
         <p class="section__subtitle">Return to <a class="nav-link" href="sign-in.html">Sign in</a></p>
       </div>
