--- a/users/templates/users/partials/_email-error.html
+++ b/users/templates/users/partials/_email-error.html
@@ -4,7 +4,7 @@ style="color: red;"
 {% else %}
 style="color: green;"
 {% endif %}
-class="email-errors"
+class="user-validation-errors"
 >
     {{message}}
 </small>
