--- a/users/templates/users/password-reset.html
+++ b/users/templates/users/password-reset.html
@@ -1,6 +1,6 @@
 {% extends 'shop/base.html' %}
 {% load static %}
-{% block extra_styles %} <link rel="stylesheet" href="{% static 'css/auth.css' %}"> {% endblock extra_styles %}
+{% block extra_styles %} <link rel="stylesheet" href="{% static 'users/css/auth.css' %}"> {% endblock extra_styles %}
 {% block content %}
 
     <main class="container auth">
