fixed swap error mesaage

--- a/users/static/users/css/auth.css
+++ b/users/static/users/css/auth.css
@@ -27,3 +27,21 @@
   margin: 0;
   color: var(--color-muted);
 }
+
+.error {
+  color: red;
+  opacity: 1;
+  transition: opacity 3s ease;
+  position: absolute;
+  bottom: 135%;
+  left: 50%;
+  transform:translateX(-50%) ;
+  z-index: 999;
+}
+
+.error.hidden {
+  opacity: 0;
+}
+
+
+
