--- a/users/templates/users/partials/_email-error.html
+++ b/users/templates/users/partials/_email-error.html
@@ -9,4 +9,13 @@ class="user-validation-errors"
     {{message}}
 </small>
 
+<small
+  id = "no-user-found"
+  style="color: red;"
+  class="error"
+  hx-swap-oob="true"
+>
+
+</small>
+
 
