--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -8,13 +8,22 @@
   <title>Northwind Commerce</title>
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% block extra_styles %}<link rel="stylesheet" href="{% static 'css/index.css' %}">{% endblock extra_styles %}
+  <link rel="stylesheet" id="swappable-stylesheet" href="">
   {%htmx_script%}
 </head>
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
   <div class="page">
-   <header class="topbar">
+   <header 
+   class="topbar" 
+   hx-boost="true"
+   hx-target="#main-container"
+   hx-swap="outerHTML transition:true"
+   >
     <div class="container topbar__inner">
-    <a class="brand" href="{% url 'shop:home' %}">Northwind Commerce</a>
+    <a 
+    class="brand" 
+    href="{% url 'shop:home' %}"
+    >Northwind Commerce</a>
     <label class="search" for="search">
         <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2">
         <circle cx="8" cy="8" r="6" />
@@ -26,9 +35,15 @@
     <div class="topbar__actions">
 
         {% if request.user.is_authenticated %}
-        <a class="nav-link" href="sign-in.html">Account</a>
+        <a 
+        class="nav-link" 
+        href="{% url 'users:sign-in' %}"
+        >Account</a>
         {% else %}
-        <a class="nav-link" href="{% url 'users:sign-in' %}">Sign in </a>
+        <a 
+        class="nav-link" 
+        href="{% url 'users:sign-in' %}"
+        >Sign in </a>
         {% endif %}
         <a class="nav-link" href="{% url 'shop:cart' %}"> 
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
