--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Northwind Commerce</title>
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
-  {% block extra_styles %}<link rel="stylesheet" href="{% static 'css/index.css' %}">{% endblock extra_styles %}
+  <link rel="stylesheet" href="{% static 'shop/css/base.css' %}">
+  {% block extra_styles %}<link rel="stylesheet" href="{% static 'shop/css/index.css' %}">{% endblock extra_styles %}
   <link rel="stylesheet" id="swappable-stylesheet" href="">
   {%htmx_script%}
 </head>
@@ -95,7 +95,6 @@
     </div>
 </footer>
 </div>
-
 <script src="{% static 'users/js/user-validation.js' %}"></script>
 </body>
 </html>
