--- a/shop/static/shop/css/product-detail.css
+++ b/shop/static/shop/css/product-detail.css
@@ -14,6 +14,12 @@
   border-radius: var(--radius-lg);
   overflow: hidden;
   border: 1px solid var(--color-border);
+  transform: scale(1,1);
+  transition: transform 100ms ease-in;
+}
+
+.gallery__main:hover{
+  transform: scale(1.05,1.05);
 }
 
 .gallery__thumbs {
