--- a/shop/templates/shop/partials/_product-detail.html
+++ b/shop/templates/shop/partials/_product-detail.html
@@ -34,6 +34,7 @@
         <h1 style="margin:0;">Structured Italian Blazer</h1>
         <div class="product-card__meta">
         <strong style="font-size:1.4rem;">$240</strong>
+        <strong style="color: red;"> {{current.quantity}} remaining </strong>
         <span class="rating">
             <svg class="star" viewBox="0 0 24 24"><polygon points="12 2 15.1 8.4 22 9.2 17 14.1 18.3 21 12 17.5 5.7 21 7 14.1 2 9.2 8.9 8.4 12 2"/></svg>
             4.8 (142 reviews)
