--- a/shop/static/shop/css/product-detail.css
+++ b/shop/static/shop/css/product-detail.css
@@ -8,19 +8,31 @@
 .gallery {
   display: grid;
   gap: var(--space-md);
+  /* grid-template-rows: 4fr 1fr;
+  height: 660px; */
 }
+
 
 .gallery__main {
   border-radius: var(--radius-lg);
   overflow: hidden;
   border: 1px solid var(--color-border);
-  transform: scale(1,1);
-  transition: transform 100ms ease-in;
+  height: 380px;
 }
 
-.gallery__main:hover{
-  transform: scale(1.05,1.05);
+.gallery__main img {
+  transform: scale(1);
+  transition: transform 150ms ease-in;
+  will-change: transform;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
+
+.gallery__main:hover img {
+  transform: scale(1.3);
+}
+
 
 .gallery__thumbs {
   display: grid;
