--- a/shop/templates/shop/partials/_product-detail.html
+++ b/shop/templates/shop/partials/_product-detail.html
@@ -85,9 +85,27 @@
             <div class="option-row">
                 <span class="form__label">Quantity</span>
                 <div class="quantity">
-                <button class="quantity__btn" type="button">-</button>
-                <span>1</span>
-                <button class="quantity__btn" type="button">+</button>
+                <button 
+                class="quantity__btn"
+                type="button"
+                hx-post="{% url 'shop:decrease-quantity' product_name %}"
+                hx-target="#quantity_count"
+                hx-push-url="false"
+                hx-swap="outerHTML"
+                hx-select="unset"
+                >-</button>
+                <span
+                id = "quantity_count"
+                >{{product_quantity}}</span>
+                <button 
+                hx-swap="outerHTML"
+                class="quantity__btn" 
+                type="button"
+                hx-post="{% url 'shop:increase-quantity' product_name %}"
+                hx-target="#quantity_count"
+                hx-push-url="false"
+                hx-select="unset"
+                >+</button>
                 </div>
             </div>
         </form>
