--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -51,7 +51,7 @@
             <circle cx="20" cy="21" r="1" />
             <path d="M5 4h2l1.5 12h11l2-9H7" />
         </svg>
-        Cart <span class="cart-count">2</span>
+        Cart <span id="cart-count-top" class="cart-count">2</span>
         </a>
     </div>
     </div>
