--- a/shop/templates/shop/partials/_cart.html
+++ b/shop/templates/shop/partials/_cart.html
@@ -1,6 +1,6 @@
 {% load static %}
 {%if request.htmx %}
-    <link rel="stylesheet"  id="swappable-stylesheet" href="{% static 'shop/css/index.css' %}"
+    <link rel="stylesheet"  id="swappable-stylesheet" href="{% static 'shop/css/cart.css' %}"
     hx-swap-oob="true"
     >
 {% endif %}
