--- a/shop/templates/shop/partials/_index.html
+++ b/shop/templates/shop/partials/_index.html
@@ -57,12 +57,12 @@
     >
         {% for product in products %}
         <article class="card product-card">
+        
         <a 
         class="product-card__link" 
         hx-push-url="true"
         href="{% url 'shop:product-detail' product.slug %}"
-
-        >
+        >   
             <div class="product-card__image">
             <img src="media/{{product.first_image_for_cover}}" alt="Structured blazer">
             </div>
@@ -78,11 +78,25 @@
         <button 
         class="btn btn--secondary" 
         type="button"
-        
-        >Add to cart <span class="btn__counter">0</span></button>
+        hx-post="{% url 'shop:add-to-cart' %}"
+        hx-vals = '{
+            "id": "{{ product.id }}",
+            "name": "{{ product.name}}",
+            "image_url": "{{ product.first_image_for_cover }}",
+            "price": "{{ product.details.0.unit_price }}",
+            "color": "{{ product.details.0.color }}",
+            "quantity": "{{ product.details.0.quantity }}",
+            "size": "{{ product.details.0.size }}",
+            "slug": "{{ product.slug }}",
+            "from_index": "True"
+        }'
+        hx-target="#cart-counter-on-product-{{product.id}}"
+        hx-swap="outerHTML"
+        >Add to cart <span id="cart-counter-on-product-{{product.id}}" class="btn__counter">{{product.quantity_in_cart}}</span></button>
         </article>
         {% endfor %}
     </div>
+
     <div class="pagination">
         <span class="pagination__item pagination__item--active">1</span>
         <span class="pagination__item">2</span>
