--- a/shop/templates/shop/partials/_cart.html
+++ b/shop/templates/shop/partials/_cart.html
@@ -19,11 +19,11 @@
         <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?auto=format&fit=crop&w=400&q=80" alt="Coat">
         <div class="cart-item__info">
             <strong>Commuter Mac Coat</strong>
-            <span class="section__subtitle">Color: Storm, Size: M</span>
+            <span class="section__subtitle">Color: Storm, Size: M, price: $2</span>
             <div class="quantity">
-            <button class="quantity__btn" type="button">-</button>
-            <span>1</span>
-            <button class="quantity__btn" type="button">+</button>
+            <button class="quantity__btn quantity__btn--reduce" type="button">-</button>
+            <span> Quantity here </span>
+            <button class="quantity__btn quantity__btn--add" type="button">+</button>
             </div>
         </div>
         <div class="cart-item__actions">
